--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
                 </div>
                 <div class="navbar">
                 </div>
+                <div class="login">
+                </div>
             </div>
 
 
@@ -73,8 +75,10 @@
         </main>
 
         <footer>
-            <div class="main-footer">
-                <div class="main-column-footer"></div>
+            <div class="main-footer container-flex">
+                <div class="main-column-footer">
+
+                </div>
 
                 <div class="secondary-column-footer"></div>
                 <div class="secondary-column-footer"></div>
@@ -87,7 +91,11 @@
             </div>
 
             <hr>
-            <div class="lower-footer"></div>
+            <div class="lower-footer container-flex">
+                <div class="lower-bar-footer">
+
+                </div>
+            </div>
 
 
 
