--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
         <header>
             <div class="header-container">
                 <div class="logo">
+                    <img src="" alt="Logo">
                 </div>
                 <div class="navbar">
+                    <a href="http://www.google.it">Link</a>
+                    <a href="http://www.google.it">Link</a>
+                    <a href="http://www.google.it">Link</a>
+                    <a href="http://www.google.it">Link</a>
                 </div>
                 <div class="login">
+                    <p>Login</p>
                 </div>
             </div>
 
