--- a/index.html
+++ b/index.html
@@ -98,7 +98,15 @@
 
             <hr>
             <div class="lower-footer container-flex">
-                <div class="lower-bar-footer">
+                <div class="lower-bar-footer flex-footer">
+                    <div class="logo-footer">
+                        <img src="" alt="Logo">
+
+                    </div>
+                    <div class="button-footer">
+                        <p>Bottone</p>
+
+                    </div>
 
                 </div>
             </div>
