--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
                     <img src="" alt="Logo">
                 </div>
                 <div class="navbar">
-                    <a href="http://www.google.it">Link</a>
-                    <a href="http://www.google.it">Link</a>
-                    <a href="http://www.google.it">Link</a>
-                    <a href="http://www.google.it">Link</a>
+                    <div class="nav-link">
+                        <a href="http://www.google.it">Link</a>
+                        <a href="http://www.google.it">Link</a>
+                        <a href="http://www.google.it">Link</a>
+                        <a href="http://www.google.it">Link</a>
+                    </div>
                 </div>
                 <div class="login">
                     <p>Login</p>
